📝 이미지 경로 수정

--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
     <div class="container">
       <!-- 초대장 이미지 -->
       <div class="invitation-wrapper">
-        <img src="image.png" alt="초대장" class="invitation-image" />
+        <img
+          src="background-image.png?v=1"
+          alt="초대장"
+          class="invitation-image"
+        />
       </div>
 
       <!-- 지도 영역 -->
