--- a/index.html
+++ b/index.html
@@ -43,25 +43,24 @@
       .map-section {
         max-width: 650px;
         width: 100%;
-        text-align: left;
       }
 
-      .map-section h2 {
-        font-size: 20px;
-        margin-bottom: 10px;
-        color: #2c3e50;
-      }
-
-      .map-section p {
-        font-size: 16px;
-        line-height: 1.6;
-        margin-bottom: 10px;
+      .map-with-background {
+        width: 100%;
+        height: 320px;
+        border-radius: 12px;
+        background-image: url("003.png?v=1");
+        background-size: cover;
+        background-position: center;
+        position: relative;
+        overflow: hidden;
       }
 
       #map {
         width: 100%;
-        height: 320px;
-        border-radius: 8px;
+        height: 100%;
+        position: relative;
+        z-index: 1;
       }
     </style>
   </head>
@@ -76,11 +75,8 @@
       </div>
 
       <div class="map-section">
-        <div class="map-background">
-          <img src="003.png?v=1" alt="지도 배경" class="map-background-image" />
-          <div class="map-content">
-            <div id="map"></div>
-          </div>
+        <div class="map-with-background">
+          <div id="map"></div>
         </div>
       </div>
     </div>
