--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       type="text/javascript"
       src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=cf54f8ba4e0570bc5824c0ff6c1a3dfa"
     ></script>
-
     <style>
       * {
         box-sizing: border-box;
@@ -45,39 +44,21 @@
         width: 100%;
       }
 
-      .map-with-background {
+      #map {
         width: 100%;
         height: 320px;
         border-radius: 12px;
-        background-image: url("003.png?v=1");
-        background-size: cover;
-        background-position: center;
-        position: relative;
-        overflow: hidden;
-      }
-
-      #map {
-        width: 100%;
-        height: 100%;
-        position: relative;
-        z-index: 1;
       }
     </style>
   </head>
   <body>
     <div class="container">
       <div class="invitation-wrapper">
-        <img src="001.png?v=1" alt="초대장1" class="invitation-image" />
-      </div>
-
-      <div class="invitation-wrapper">
-        <img src="002.png?v=1" alt="초대장2" class="invitation-image" />
+        <img src="001.png?v=1" alt="초대장" class="invitation-image" />
       </div>
 
       <div class="map-section">
-        <div class="map-with-background">
-          <div id="map"></div>
-        </div>
+        <div id="map"></div>
       </div>
     </div>
 
