--- a/index.html
+++ b/index.html
@@ -23,42 +23,69 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 20px;
-        padding: 40px;
+        padding: 0;
       }
 
-      .invitation-wrapper {
-        max-width: 650px;
+      .combined-wrapper {
+        position: relative;
         width: 100%;
+        max-width: 650px;
       }
 
       .invitation-image {
         width: 100%;
         display: block;
-        border-radius: 12px;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+        border-radius: 0;
       }
 
       .map-section {
-        max-width: 650px;
         width: 100%;
+        height: 320px;
+        margin-top: -5px; /* 001.png 끝부분과 자연스럽게 연결 */
+        border-radius: 0 0 12px 12px;
+        overflow: hidden;
+      }
+
+      .map-overlay-container {
+        position: relative;
+        width: 100%;
+        max-width: 650px;
+      }
+
+      .background-img {
+        width: 100%;
+        display: block;
+        border-radius: 12px;
+      }
+
+      .map-absolute {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 250px;
+
+        height: 300px;
+        margin: 0 20px;
+        border-radius: 12px;
+        overflow: hidden;
+        box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
       }
 
       #map {
         width: 100%;
-        height: 320px;
-        border-radius: 12px;
+        height: 100%;
       }
     </style>
   </head>
   <body>
     <div class="container">
       <div class="invitation-wrapper">
-        <img src="001.png?v=1" alt="초대장" class="invitation-image" />
-      </div>
-
-      <div class="map-section">
-        <div id="map"></div>
+        <div class="map-overlay-container">
+          <img src="002.png?v=1" alt="초대장" class="background-img" />
+          <div class="map-absolute">
+            <div id="map"></div>
+          </div>
+        </div>
       </div>
     </div>
 
