--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       .map-section {
         width: 100%;
         height: 320px;
-        margin-top: -5px; /* 001.png 끝부분과 자연스럽게 연결 */
+        margin-top: -5px;
         border-radius: 0 0 12px 12px;
         overflow: hidden;
       }
@@ -63,8 +63,8 @@
         left: 0;
         right: 0;
         bottom: 250px;
-
-        height: 300px;
+        padding: 20px;
+        height: 200px;
         margin: 0 20px;
         border-radius: 12px;
         overflow: hidden;
@@ -81,7 +81,7 @@
     <div class="container">
       <div class="invitation-wrapper">
         <div class="map-overlay-container">
-          <img src="002.png?v=1" alt="초대장" class="background-img" />
+          <img src="001.png?v=1" alt="초대장" class="background-img" />
           <div class="map-absolute">
             <div id="map"></div>
           </div>
