--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
       document.addEventListener("DOMContentLoaded", function () {
         const container = document.getElementById("map");
         const options = {
-          center: new kakao.maps.LatLng(37.5313268, 126.9647271),
+          center: new kakao.maps.LatLng(37.5298, 126.9633),
           level: 3,
         };
 
         const map = new kakao.maps.Map(container, options);
 
-        const markerPosition = new kakao.maps.LatLng(37.5313268, 126.9647271);
+        const markerPosition = new kakao.maps.LatLng(37.5298, 126.9633);
         const marker = new kakao.maps.Marker({
           position: markerPosition,
         });
